# Multi-Agent-Town

./: README.md  README_langchain_vllm.md  example_usage.py  openai_example.py  pyproject.toml  requirements.txt  universal_llm.py
examples/: basic_chat.py  stream_chat.py
scripts/: check_env.py  run_openai_example.py  run_vllm_example.py
src/universal_llm/: __init__.py  client.py  config.py  factory.py  messages.py
src/universal_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.py
